--- a/index.html
+++ b/index.html
@@ -23,10 +23,10 @@
         <span></span>
         <span></span>
         <span></span>
-        <span></span>
-        <span></span>
-        <span>B</span>
-        <span>A</span>
+        <span>2</span>
+        <span>0</span>
+        <span>/</span>
+        <span>1</span>
         <span>O</span>
 
         <!-- <span>A</span> -->
